...
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="Entrance date  "
                android:padding="5dp"
                />
            <EditText
                android:id="@+id/edt_year"
                android:ems="6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- 2015/10/1 "
                />
            <ImageView
...
